@startuml Programa

title Diagrama de Clases

class Centro {
    ubicacion
    capacidad
    medicos
    sesiones
    pacientes
    
    
}

class Persona {
    - int rut
    - String nombre
    - int edad

    + void setRut()
    + int getRut()
    + void setNombre()
    + String getNombre()
    + void setEdad()
    + int getEdad()
    + String toString()
}

class Paciente {
    - String direccion
    - String historial
    - Sesion sesiones
    
    obtenerSesiones()
    agregarSesion()
    eliminarSesion(sesion)

    toString()
}

class Doctor {
    sesiones
    
    
    toString()
}

class Sesion {
    HashMap sesionMap
    ArrayList sesionArray

    obtenerSesion()
}

Centro --* Persona : Contiene
Persona --> Paciente : Es
Persona --|> Doctor

@enduml
